# openENV

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  scenerio.json  test_deployed.py
agent/: baseline.py
env/: __init__.py  core.py  environment.py  grader.py  models.py  tasks.py  tickets.py
scripts/: generate_tasks_from_csv.py
server/: app.py
tasks/: README.md  easy.json  hard.json  medium.json
tasks/optional/: Easy tickets.txt  Hard tickets.txt  Medium tickets.txt
tests/: test_api.py  test_deployed.py  test_environment.py  test_grader.py  test_inference.py  test_tasks.py
